# pybackend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  git_log.txt  main.py  pyproject.toml  seed.py
.github/workflows/: deploy.yml
.postman/: resources.yaml
alembic/: env.py
alembic/versions/: bb2f6d204042_add_password_hash_to_users.py  ff9ae9a01060_initial_tables.py
app/: auth.py  config.py  database.py  dependencies.py  main.py  metrics.py
app/crud/: base.py  category.py  order.py  product.py  profile.py  user.py
app/models/: __init__.py  category.py  order.py  product.py  profile.py  user.py
app/routers/: auth.py  categories.py  orders.py  products.py  profiles.py  users.py
app/schemas/: auth.py  category.py  order.py  product.py  profile.py  user.py
docs/: PROJECT_OVERVIEW.md  commands.txt  lab7_monitoring.md
docs/screenshots/lab6/: test_report.html  test_results.txt
monitoring/grafana/provisioning/dashboards/: 01_api.json  02_postgresql.json  03_docker.json  04_custom.json  dashboard.yml  pybackend_custom.json
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
scripts/: generate_grafana_dashboards.py  warmup_metrics.py
tests/: conftest.py  test_auth.py  test_categories.py  test_crud.py  test_orders.py  test_products.py  test_profiles.py  test_root.py  test_users.py
